--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "application-name",
-  "version": "0.0.1",
+  "version": "0.0.1-3",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "app.js"
   },
   "dependencies": {
     "express": "3.0.0rc5",
     "jade": "*",
-    "coffee-script": "~1.4.0"
-  }
+    "coffee-script": "~1.4.0",
+    "node-dev": "~0.2.8"
+  },
+  "engines": {
+    "node": "0.8.x"
+  },
+  "subdomain": "hazzpie"
 }
